--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,13 @@
 <p>My first paragraph.</p>
 <p>My first paragraph.</p>
 <p>My first paragraph.</p>
+<p>My first paragraph.</p>
+<p>My first paragraph.</p>
+<p>My first paragraph.</p>
+<p>My first paragraph.</p>
+<p>My first paragraph.</p>
+<p>My first paragraph.</p>
+<p>My first paragraph.</p>
 
 </body>
 </html>
